force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Gender__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Gender__c</fullName>
    <description>The primary debtor&apos;s gender.</description>
    <inlineHelpText>The primary debtor&apos;s gender.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>