force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Mailing_City__c</fullName>
    <description>The primary debtor&apos;s address city.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary debtor&apos;s address city.</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>