force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Mailing_Country__c</fullName>
    <defaultValue>&quot;Canada&quot;</defaultValue>
    <description>The primary debtor&apos;s address country.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary debtor&apos;s address country.</inlineHelpText>
    <label>Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>