force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Mailing_Street__c</fullName>
    <description>The primary debtor&apos;s address street name and number.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary debtor&apos;s address street name and number.</inlineHelpText>
    <label>Street Name &amp; Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>