force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Middle_Name__c</fullName>
    <description>Middle name of the primary debtor.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Middle name of the primary debtor.</inlineHelpText>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>