force-app/main/default/objects/Insolvency__c/fields/Debtor_1_SIN__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_SIN__c</fullName>
    <description>Social Insurance Number of the primary debtor, if available.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Social Insurance Number of the primary debtor, if available.</inlineHelpText>
    <label>SIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>