force-app/main/default/objects/Insolvency__c/fields/Debtor_1_Spouse_CommonLaw_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Spouse_CommonLaw_Partner_Name__c</fullName>
    <description>Name of the primary debtor&apos;s spouse.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the primary debtor&apos;s spouse.</inlineHelpText>
    <label>Spouse / Common-Law Partner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>