force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Court_Number__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Court_Number__c</fullName>
    <description>The court number for the secondary debtor as noted on the creditor’s package.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The court number for the secondary debtor as noted on the creditor’s package.</inlineHelpText>
    <label>Co-Debtor Court Number</label>
    <length>110</length>
    <type>Text</type>
</CustomField>