force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Email__c</fullName>
    <description>Email address of the secondary debtor, if available.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Email address of the secondary debtor, if available.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>