force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Employer_Country__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Employer_Country__c</fullName>
    <defaultValue>&quot;Canada&quot;</defaultValue>
    <description>The address country of the secondary debtor&apos;s employer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The address country of the secondary debtor&apos;s employer.</inlineHelpText>
    <label>Employer Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>