force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Employer_Street__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Employer_Street__c</fullName>
    <description>The address street name and number of the secondary debtor&apos;s employer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The address street name and number of the secondary debtor&apos;s employer.</inlineHelpText>
    <label>Employer Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>