force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Estate_Number__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Estate_Number__c</fullName>
    <description>The debtor estate number as noted on the creditor’s package.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Debtor Estate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>