force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Last_Name__c</fullName>
    <description>Last name of the secondary debtor.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last name of the secondary debtor.</inlineHelpText>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>