force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Mailing_Postal_Code__c</fullName>
    <description>The secondary debtor&apos;s address postal code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The secondary debtor&apos;s address postal code.</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>