force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Marital_Status__c</fullName>
    <description>The secondary debtor&apos;s marital status.</description>
    <inlineHelpText>The secondary debtor&apos;s marital status.</inlineHelpText>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Common law</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>