force-app/main/default/objects/Insolvency__c/fields/Debtor_2_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Occupation__c</fullName>
    <description>The secondary debtor&apos;s occupation.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The secondary debtor&apos;s occupation.</inlineHelpText>
    <label>Occupation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>