force-app/main/default/objects/Insolvency__c/fields/Debtor__c.field-meta.xml
<CustomField>
    <fullName>Debtor__c</fullName>
    <description>Name of the primary debtor</description>
    <formula>Debtor_1_First_Name__c + &apos; &apos; + Debtor_1_Last_Name__c</formula>
    <inlineHelpText>Name of the primary debtor</inlineHelpText>
    <label>Debtor</label>
    <type>Text</type>
</CustomField>