force-app/main/default/objects/Insolvency__c/fields/Debtor_Age__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Age__c</fullName>
    <formula>YEAR(Insolvency_Date__c) -  Date_Of_Birth_Year__c</formula>
    <label>Debtor Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>