force-app/main/default/objects/Insolvency__c/fields/Debtor_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To Flag a debtor as deceased</inlineHelpText>
    <label>Debtor Deceased</label>
    <type>Checkbox</type>
</CustomField>