force-app/main/default/objects/Insolvency__c/fields/Debtor_Portion_Of_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Portion_Of_Monthly_Income__c</fullName>
    <description>Debtor Portion Of Monthly Income</description>
    <inlineHelpText>Debtor Portion Of Monthly Income</inlineHelpText>
    <label>Debtor Portion Of Monthly Income</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>