force-app/main/default/objects/Insolvency__c/fields/Debtor_Portion_Of_Monthly_Income_Frml__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Portion_Of_Monthly_Income_Frml__c</fullName>
    <description>Debtor Portion Of Monthly Income Formula</description>
    <formula>Available_Monthly_Income_Of_Debtor_Frml__c /Available_Monthly_Income_Of_Family_Frml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Debtor Portion Of Monthly Income Formula</inlineHelpText>
    <label>Debtor Portion Of Monthly Income Frml</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>