force-app/main/default/objects/Insolvency__c/fields/Dental_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Dental_Expenses__c</fullName>
    <description>Dental Expenses</description>
    <inlineHelpText>Dental Expenses</inlineHelpText>
    <label>Dental Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>