force-app/main/default/objects/Insolvency__c/fields/Dining_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Dining_Expenses__c</fullName>
    <description>Dining Expenses</description>
    <inlineHelpText>Dining Expenses</inlineHelpText>
    <label>Dining Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>