force-app/main/default/objects/Insolvency__c/fields/Disposable_Income__c.field-meta.xml
<CustomField>
    <fullName>Disposable_Income__c</fullName>
    <description>Disposable income is total income (including government transfers) after deducting not only income taxes but also several non-discretionary expenditures</description>
    <formula>Total_Monthly_Income_Of_Family__c
- Property_Taxes_Condo_Fees_Expenses__c
- Gifts_Charitable_Expenses__c
- Life_Insurance_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Disposable income is total income (including government transfers) after deducting not only income taxes but also several non-discretionary expenditures</inlineHelpText>
    <label>Disposable Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>