force-app/main/default/objects/Insolvency__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>Disposition</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Disposition</inlineHelpText>
    <label>Disposition</label>
    <length>200</length>
    <type>Text</type>
</CustomField>