force-app/main/default/objects/Insolvency__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <description>To store document ID from DocParser</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To store document ID from DocParser</inlineHelpText>
    <label>Document ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>