force-app/main/default/objects/Insolvency__c/fields/Eligible_For_Voting_Decision__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Voting_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligible For Voting Decision</description>
    <inlineHelpText>Eligible For Voting Decision</inlineHelpText>
    <label>Eligible For Voting Decision</label>
    <type>Checkbox</type>
</CustomField>