force-app/main/default/objects/Insolvency__c/fields/Employment_From_Date_Debtor1__c.field-meta.xml
<CustomField>
    <fullName>Employment_From_Date_Debtor1__c</fullName>
    <description>Employment From Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Employment From Date</inlineHelpText>
    <label>Employment From Date</label>
    <type>Date</type>
</CustomField>