force-app/main/default/objects/Insolvency__c/fields/Employment_Status_Debtor1__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status_Debtor1__c</fullName>
    <description>Employment Status</description>
    <inlineHelpText>Employment Status</inlineHelpText>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed-full-time</fullName>
            </value>
            <value>
                <fullName>Employed-part-time</fullName>
            </value>
            <value>
                <fullName>Employed-Seasonal</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Not employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>