force-app/main/default/objects/Insolvency__c/fields/Employment_To_Date_Debtor1__c.field-meta.xml
<CustomField>
    <fullName>Employment_To_Date_Debtor1__c</fullName>
    <description>Employment To Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Employment To Date</inlineHelpText>
    <label>Employment To Date</label>
    <type>Date</type>
</CustomField>