force-app/main/default/objects/Insolvency__c/fields/Entertainment_Sports_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Sports_Expenses__c</fullName>
    <description>Entertainment Sports Expenses</description>
    <inlineHelpText>Entertainment Sports Expenses</inlineHelpText>
    <label>Entertainment Sports Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>