force-app/main/default/objects/Insolvency__c/fields/Estate_Level_Unsecured_Debt_Pct_Frml__c.field-meta.xml
<CustomField>
    <fullName>Estate_Level_Unsecured_Debt_Pct_Frml__c</fullName>
    <description>Estate Level Unsecured Debt (%)</description>
    <formula>Total_Unsecured_Liabilities_Clc__c
/
(
Total_Unsecured_Liabilities_Clc__c 
+ 
Total_Secured_Liabilities_Clc__c
+
Total_Preferred_Liabilities_Clc__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estate Level Unsecured Debt (%)</inlineHelpText>
    <label>Estate Level Unsecured Debt (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>