force-app/main/default/objects/Insolvency__c/fields/Ever_been_Bankrupt_Before_Debtor1__c.field-meta.xml
<CustomField>
    <fullName>Ever_been_Bankrupt_Before_Debtor1__c</fullName>
    <description>Have you ever been bankrupts before in Canada?</description>
    <inlineHelpText>Have you ever been bankrupts before in Canada?</inlineHelpText>
    <label>Ever Been Bankrupt Before</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>