force-app/main/default/objects/Insolvency__c/fields/Ever_Made_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Ever_Made_Proposal__c</fullName>
    <description>Have you ever made a proposal under the Bankruptcy?</description>
    <inlineHelpText>Have you ever made a proposal under the Bankruptcy?</inlineHelpText>
    <label>Ever Made Proposal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>