force-app/main/default/objects/Insolvency__c/fields/Expected_Discharge_Date_New_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Expected_Discharge_Date_New_Calculation__c</fullName>
    <description>The field needs to be deleted</description>
    <formula>ADDMONTHS( Payment_Start_Date__c , Number_of_Payments__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The field needs to be deleted</inlineHelpText>
    <label>Expected Discharge Date New Calculation</label>
    <type>Date</type>
</CustomField>